--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.28_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.28_translation-de-sabbamitta.json
@@ -13,7 +13,7 @@
   "sn22.28:1.9": "bei der Wahrnehmung … ",
   "sn22.28:1.10": "bei den Entscheidungen … ",
   "sn22.28:1.12": "beim Bewusstsein keine vorteilhaften Folgen gäbe, wären die Lebewesen nicht von ihm angezogen. ",
-  "sn22.28:1.13": "Aber da es beim Bewusstsein vorteilhafte Folgen gibt, lieben die Lebewesen es. ",
+  "sn22.28:1.13": "Aber da es beim Bewusstsein vorteilhafte Folgen gibt, sind die Lebewesen von ihm angezogen. ",
   "sn22.28:1.14": "Wenn es beim Bewusstsein keine nachteiligen Folgen gäbe, würden die Lebewesen nicht davon ernüchtert werden. ",
   "sn22.28:1.15": "Aber da es beim Bewusstsein nachteilige Folgen gibt, werden die Lebewesen davon ernüchtert. ",
   "sn22.28:1.16": "Wenn es vom Bewusstsein kein Entrinnen gäbe, könnten die Lebewesen ihm nicht entrinnen. ",
