--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.17_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.17_translation-de-sabbamitta.json
@@ -2,7 +2,7 @@
   "sn35.17:0.1": "Verbundene Lehrreden 35.17 ",
   "sn35.17:0.2": "2. Das Kapitel mit Paaren ",
   "sn35.17:0.3": "Wenn es keine vorteilhaften Folgen gäbe (1) ",
-  "sn35.17:1.1": "„Mönche und Nonnen, wenn es beim Auge keine vorteilhaften Folgen gäbe, würden die Lebewesen es nicht lieben. ",
+  "sn35.17:1.1": "„Mönche und Nonnen, wenn es beim Auge keine vorteilhaften Folgen gäbe, wären die Lebewesen nicht von ihm angezogen. ",
   "sn35.17:1.2": "Aber da es beim Auge vorteilhafte Folgen gibt, lieben die Lebewesen es. ",
   "sn35.17:1.3": "Wenn es beim Auge keine nachteiligen Folgen gäbe, würden die Lebewesen nicht davon ernüchtert werden. ",
   "sn35.17:1.4": "Aber da es beim Auge nachteilige Folgen gibt, werden die Lebewesen davon ernüchtert. ",
