--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -17,7 +17,7 @@
   "sn22.60:3.4": "Lebewesen werden aus einem Grund und einer Ursache geläutert.“ ",
   "sn22.60:4.1": "„Aber Herr, was ist der Grund und die Ursache für die Verunreinigung der Lebewesen? ",
   "sn22.60:4.2": "Wie werden Lebewesen aus einem Grund und einer Ursache verunreinigt?“ ",
-  "sn22.60:5.1": "„Mahāli, wenn Form ausschließlich schmerzhaft wäre – von Schmerz durchdrungen und vollgesogen und nicht von Glück vollgesogen –, würden die Lebewesen sie nicht lieben. ",
+  "sn22.60:5.1": "„Mahāli, wenn Form ausschließlich schmerzhaft wäre – von Schmerz durchdrungen und vollgesogen und nicht von Glück vollgesogen –, wären die Lebewesen nicht von ihr angezogen. ",
   "sn22.60:5.2": "Aber da Form angenehm ist – von Glück durchdrungen und vollgesogen und nicht von Schmerz vollgesogen –, lieben die Lebewesen sie. ",
   "sn22.60:5.3": "Da sie sie lieben, sind sie daran gebunden und werden so verunreinigt. ",
   "sn22.60:5.4": "Das ist ein Grund und eine Ursache für die Verunreinigung der Lebewesen. ",
