--- a/translation/de/site/name/sutta/an-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/an-name_translation-de-site.json
@@ -232,7 +232,7 @@
   "an-name:231.an3.120": "Reinheit (1) ",
   "an-name:232.an3.121": "Reinheit (2) ",
   "an-name:233.an3.122": "Urteilskraft ",
-  "an-name:234.an3-kusinaravagga": "Das Kapitel in Kusināra ",
+  "an-name:234.an3-kusinaravagga": "Das Kapitel in Kusinārā ",
   "an-name:235.an3.123": "In Kusināra ",
   "an-name:236.an3.124": "Zank ",
   "an-name:237.an3.125": "Das Gotamaka-Heiligtum ",
