--- a/translation/de/sabbamitta/sutta/an/an6/an6.61_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.61_translation-de-sabbamitta.json
@@ -39,7 +39,7 @@
   "an6.61:10.2": "Da gingen sie zum Buddha, verbeugten sich, setzten sich zur Seite hin ",
   "an6.61:10.3": "und berichteten ihm, worüber sie gesprochen hatten. Sie fragten: ",
   "an6.61:10.4": "„Herr, wer hat gut gesprochen?“ ",
-  "an6.61:10.5": "„Mönche und Nonnen, ihr habt alle gut gesprochen. Doch worauf ich im ‚Weg zum Jenseits‘, in ‚Metteyyas Fragen‘, Bezug genommen habe, als ich sagte: ",
+  "an6.61:10.5": "„Mönche und Nonnen, ihr habt alle gut gesprochen. Doch worauf ich im ‚Weg zum anderen Ufer‘, in ‚Metteyyas Fragen‘, Bezug genommen habe, als ich sagte: ",
   "an6.61:11.1": "‚Der Weise hat beide Enden verstanden ",
   "an6.61:11.2": "und steckt nicht in der Mitte fest. ",
   "an6.61:11.3": "Ein großer Mann ist er, erkläre ich; ",
