--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.31_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "sn12.31:0.3": "Das Entstandene ",
   "sn12.31:1.1": "Einmal hielt sich der Buddha bei Sāvatthī auf. ",
   "sn12.31:1.2": "Da sagte der Buddha zum Ehrwürdigen Sāriputta: ",
-  "sn12.31:1.3": "„Sāriputta, im ‚Weg zum Jenseits‘, in ‚Ajitas Fragen‘, heißt es: ",
+  "sn12.31:1.3": "„Sāriputta, im ‚Weg zum anderen Ufer‘, in ‚Ajitas Fragen‘, heißt es: ",
   "sn12.31:2.1": "‚Die die Lehre eingeschätzt haben, ",
   "sn12.31:2.2": "und die vielerlei Personen in Schulung hier – ",
   "sn12.31:2.3": "sag' mir, wie sie sich verhalten, lieber Herr, ",
