--- a/translation/de/sabbamitta/sutta/an/an3/an3.33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.33_translation-de-sabbamitta.json
@@ -16,7 +16,7 @@
   "an3.33:3.1": "Wenn ein Mönch oder eine Nonne kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen mit Bewusstsein versehenen Körper hat, noch für alle äußeren Reize; und wenn diese Person im Besitz der Freiheit des Herzens lebt, der Freiheit durch Weisheit, wo Ich-Machen, Mein-Machen und zugrunde liegende Neigung zur Einbildung nicht mehr sind – ",
   "an3.33:3.2": "dann nennt man sie ",
   "an3.33:3.3": "einen Mönch oder eine Nonne, die das Verlangen abgeschnitten haben, die Fesseln gelöst, die Einbildung richtig erfasst und dadurch dem Leiden ein Ende gemacht haben. ",
-  "an3.33:3.4": "Und, Sāriputta, das ist es, worauf ich im ‚Weg zum Jenseits‘, in ‚Udayas Fragen‘, Bezug genommen habe, als ich sagte: ",
+  "an3.33:3.4": "Und, Sāriputta, das ist es, worauf ich im ‚Weg zum anderen Ufer‘, in ‚Udayas Fragen‘, Bezug genommen habe, als ich sagte: ",
   "an3.33:4.1": "‚Das Aufgeben von sinnlichem Verlangen ",
   "an3.33:4.2": "und von Abneigung ebenfalls, ",
   "an3.33:4.3": "das Vertreiben der Dumpfheit, ",
