--- a/translation/de/sabbamitta/sutta/an/an3/an3.33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.33_translation-de-sabbamitta.json
@@ -20,7 +20,7 @@
   "an3.33:4.1": "‚Sinnlichem Verlangen aufgeben ",
   "an3.33:4.2": "und Abneigung ebenfalls, ",
   "an3.33:4.3": "Dumpfheit vertreiben, ",
-  "an3.33:4.4": "das Aufhören der Reue; ",
+  "an3.33:4.4": "Reue nicht aufkommen lassen; ",
   "an3.33:5.1": "in reinem Gleichmut, reiner Achtsamkeit, ",
   "an3.33:5.2": "nachdem man die Gesetzmäßigkeiten untersucht hat – ",
   "an3.33:5.3": "das, so erkläre ich, ist Befreiung durch Wissen, ",
