--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.19_translation-de-sabbamitta.json
@@ -18,7 +18,7 @@
   "sn12.19:5.4": "Daher wird der Tor, wenn sein Körper sich auflöst, in einem anderen Körper wiedergeboren. ",
   "sn12.19:5.5": "Wenn er in einem anderen Körper wiedergeboren ist, ist er nicht befreit von Wiedergeburt, von Alter und Tod, von Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. ",
   "sn12.19:5.6": "Er ist nicht befreit vom Leiden, sage ich. ",
-  "sn12.19:6.1": "Für einen klugen Menschen, der von Unwissenheit behindert und von Verlangen gefesselt ist, wurde dieser Körper erzeugt. Aber der Kluge hat diese Unwissenheit aufgegeben und dieses Verlangen beendet. ",
+  "sn12.19:6.1": "Für einen klugen Menschen, der von Unwissenheit eingehüllt und von Verlangen gefesselt ist, wurde dieser Körper erzeugt. Aber der Kluge hat diese Unwissenheit aufgegeben und dieses Verlangen beendet. ",
   "sn12.19:6.2": "Und warum? ",
   "sn12.19:6.3": "Der kluge Mensch hat die spirituelle Reise zum völligen Beenden des Leidens abgeschlossen. ",
   "sn12.19:6.4": "Daher wird der Kluge, wenn sein Körper sich auflöst, nicht in einem anderen Körper wiedergeboren. ",
