--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.99_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.99_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "sn22.99:1.4": "Es kommt eine Zeit, da das Weltmeer verdorrt und vertrocknet und nicht mehr da ist. ",
   "sn22.99:1.5": "Doch für die Lebewesen, die umherstreifen und umherwandern, von Unwissenheit eingehüllt und von Verlangen gefesselt, ist es nicht möglich, dem Leiden ein Ende zu machen, sage ich. ",
   "sn22.99:1.6": "Es kommt eine Zeit, da Sineru, der König der Berge, verbrennt und zerfällt und nicht mehr da ist. ",
-  "sn22.99:1.7": "Doch für die Lebewesen, die umherstreifen und umherwandern, von Unwissenheit behindert und von Verlangen gefesselt, ist es nicht möglich, dem Leiden ein Ende zu machen, sage ich. ",
+  "sn22.99:1.7": "Doch für die Lebewesen, die umherstreifen und umherwandern, von Unwissenheit eingehüllt und von Verlangen gefesselt, ist es nicht möglich, dem Leiden ein Ende zu machen, sage ich. ",
   "sn22.99:1.8": "Es kommt eine Zeit, da die große Erde verbrennt und zerfällt und nicht mehr da ist. ",
   "sn22.99:1.9": "Doch für die Lebewesen, die umherstreifen und umherwandern, von Unwissenheit behindert und von Verlangen gefesselt, ist es nicht möglich, dem Leiden ein Ende zu machen, sage ich. ",
   "sn22.99:2.1": "Wie ein Hund, der mit einer Leine an einen festen Pfosten oder Pflock angebunden wäre: Er würde ständig nur um diesen Pfosten oder Pflock herumlaufen und ihn umkreisen. ",
