--- a/translation/de/sabbamitta/sutta/sn/sn15/sn15.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn15/sn15.1_translation-de-sabbamitta.json
@@ -14,7 +14,7 @@
   "sn15.1:1.10": "‚Das ist meine Mutter, das ist meine Großmutter.‘ Das Gras, die Stängel, Zweige und Blätter würden eher aufgebraucht als die Mütter und Großmütter dieses Menschen zu Ende gingen. ",
   "sn15.1:1.11": "Und warum? ",
   "sn15.1:1.12": "Das Umherwandern hat keinen bekannten Anfang. ",
-  "sn15.1:1.13": "Ein Anfangspunkt für das Umherstreifen und Umherwandern der Lebewesen, die von Unwissenheit behindert und von Verlangen gefesselt sind, ist nicht gefunden. ",
+  "sn15.1:1.13": "Ein Anfangspunkt für das Umherstreifen und Umherwandern der Lebewesen, die von Unwissenheit eingehüllt und von Verlangen gefesselt sind, ist nicht gefunden. ",
   "sn15.1:1.14": "So lange Zeit habt ihr Leiden, Qual und Verderben erfahren und die Leichenfelder aufgefüllt. ",
   "sn15.1:1.15": "Eben das reicht völlig aus, dass ihr in Bezug auf alle Bedingungen ernüchtert werdet, dass eure Leidenschaft schwindet und ihr davon frei werdet.“ "
 }
