--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -6,7 +6,7 @@
   "mn95:1.3": "Tuo metu Palaimintasis apsistojo salos medžių giraitėje „Dievų giraitė” netoli Opasados, į šiaurę nuo kaimo.",
   "mn95:2.1": "Tuo gi pat metu brahmanas Čianki gyveno Opasadoje valdydamas ją, su daugybe žmonių, su gausybe žolės (gyvuliams), medienos, vandens telkinių, grūdų, karališko turto, šventų Kosalos karaliaus, Pasėnadžio įteiktų dovanų. ",
   "mn95:3.1": "Išgirdo gi Opasados brahmanai namų šeimininkai,",
-  "mn95:3.2": "esą atsiskyrėlis Gotama Sakjų sūnus, palikusysis pasaulietinį Sakjų šeimos gyvenimą, klajodamas Kosaloje kartu su didžiule vienuolių bendruomene užsuko į kosalos brahmanų kaimą Opasadą ir apsistojo salos medžių giraitėje „Dievų giraitė” netoli Opasados, į šiaurę nuo kaimo.",
+  "mn95:3.2": "esą atsiskyrėlis Gotama Sakjų sūnus, palikusysis pasaulietinį Sakjų šeimos gyvenimą, klajodamas Kosaloje kartu su didžiule vienuolių bendruomene užsuko į Kosalos brahmanų kaimą Opasadą ir apsistojo salos medžių giraitėje „Dievų giraitė” netoli Opasados, į šiaurę nuo kaimo.",
   "mn95:3.3": "Ir apie tą gi Garbųjį Gotamą yra pasklidę tokie nuostabūs pagyros žodžiai:",
   "mn95:3.4": "„Šis Palaimintasis yra arahantas, tobulai nušvitęs, įgijęs žinojimą ir gerą elgesį, gerai žengęs, žinantis pasaulį, neprilygstamas tramdytinų žmonių auklėtojas, dievybių ir žmonių mokytojas, nušvitęs, palaimintas.” ",
   "mn95:3.5": "Jis skelbiasi pats tiesiogine patirtimi pažinęs šį pasaulį su jo dievybėmis, Mara, Brahma, su atsiskyrėlių ir brahmanų karta, su jo valdovais ir žmonėmis. ",
