--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -23,7 +23,7 @@
   "mn95:6.4": "Jie eina pamatyti tą Garbųjį Gotamą.”",
   "mn95:6.5": "„Štai ką, gerbiamas ministre, eiki pas Opasados brahmanus namų šeimininkus ir nuėjęs pas juos pasakyk jiems tai:",
   "mn95:6.6": "„Gerbiamieji, brahmanas Čanki sako,",
-  "mn95:6.7": "kad gerbiamieji palauktų, brahmanas Čianki taip pat eis pamatyti atsiskyrelį Gotamą.”",
+  "mn95:6.7": "kad gerbiamieji palauktų, brahmanas Čianki taip pat eis pamatyti atsiskyrėlį Gotamą.”",
   "mn95:6.8": "„Gerai, gerbiamasis,” – atsakė ministras brahmanui Čianki ir nuėjo pas Opasados brahmanus namų šeimininkus ir nuėjęs pas juos pasakė jiems:",
   "mn95:6.9": "„Gerbiamieji, brahmanas Čanki sako,",
   "mn95:6.10": "kad gerbiamieji palauktų, brahmanas Čianki taip pat eis pamatyti atsiskyrelį Gotamą.”",
