--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -277,7 +277,7 @@
   "mn95:31.5": "bet dėl to, kad yra laikomasi arti, yra klausomasi.",
   "mn95:31.6": "Tad laikymasis arti (mokytojo) ypač padeda klausytis.”",
   "mn95:32.1": "„Bet, Gerbiamas Gotama, koks dalykas ypač padeda laikytis arti (mokytojo)?",
-  "mn95:32.2": "Klausiame Gerbiamojo Gotamos apie dalyką ypač padedantį laikytis atri (mokytojo).”",
+  "mn95:32.2": "Klausiame Gerbiamojo Gotamos apie dalyką ypač padedantį laikytis arti (mokytojo).”",
   "mn95:32.3": "„Ypač padeda laikytis atri (mokytojo), Bharadvadžia, nuėjimas pas jį.",
   "mn95:32.4": "Nenuėjus pas jį, arti jo nesilaikysi,",
   "mn95:32.5": "bet dėl to, kad pas jį nueinama, yra laikomasi arti jo.",
