--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -281,7 +281,7 @@
   "mn95:32.3": "„Ypač padeda laikytis arti (mokytojo), Bharadvadžia, nuėjimas pas jį.",
   "mn95:32.4": "Nenuėjus pas jį, arti jo nesilaikysi,",
   "mn95:32.5": "bet dėl to, kad pas jį nueinama, yra laikomasi arti jo.",
-  "mn95:32.6": "Tad nuėjimas pas mokytoją ypač padeda ilaikytis arti jo.”",
+  "mn95:32.6": "Tad nuėjimas pas mokytoją ypač padeda laikytis arti jo.”",
   "mn95:33.1": "„Bet, Gerbiamas Gotama, koks dalykas ypač padeda nueiti pas mokytoją?",
   "mn95:33.2": "Klausiame Gerbiamojo Gotamos apie dalyką ypač padedantį nueiti pas mokytoją.”",
   "mn95:33.3": "„Ypač padeda nueiti pas mokytoją, Bharadvadžia, tikėjimas.",
