--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -79,7 +79,7 @@
   "mn95:9.26": "Išties, gerbiamieji, atsiskyrėlis Gotama užsuko į Kosalos brahmanų kaimą Opasadą ir apsistojo salos medžių giraitėje „Dievų giraitė” netoli Opasados, į šiaurę nuo kaimo.",
   "mn95:9.27": "Atsiskyrėliai ar brahmanai, kurie ateina į mūsų kaimo apylinkes yra mūsų svečiai.",
   "mn95:9.28": "Svečiams gi mes turime rodyti pagarbą, gerbti, aukštinti, garbinti juos.",
-  "mn95:9.29": "Ir tas atsiskyrėlis Gotama, kuris užsuko į kosalos brahmanų kaimą Opasadą ir apsistojo salos medžių giraitėje „Dievų giraitė” netoli Opasados, į šiaurę nuo kaimo, tas atsiskyrėlis Gotama yra mūsų svečias.",
+  "mn95:9.29": "Ir tas atsiskyrėlis Gotama, kuris užsuko į Kosalos brahmanų kaimą Opasadą ir apsistojo salos medžių giraitėje „Dievų giraitė” netoli Opasados, į šiaurę nuo kaimo, tas atsiskyrėlis Gotama yra mūsų svečias.",
   "mn95:9.30": "Svečiams gi mes turime rodyti pagarbą, gerbti, aukštinti, garbinti juos.",
   "mn95:9.31": "Todėl gerbiamam Gotamai nedera eiti pamatyti mus.",
   "mn95:9.32": "Tai mums dera eiti pamatyti gerbiamą Gotamą.",
