--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -4,7 +4,7 @@
   "mn95:1.1": "Taip aš girdėjau.",
   "mn95:1.2": "Kartą Palaimintasis klajodamas Kosaloje kartu su didžiule vienuolių bendruomene užsuko į Kosalos brahmanų kaimą Opasadą.",
   "mn95:1.3": "Tuo metu Palaimintasis buvo apsistojęs salos medžių giraitėje „Dievų giraitė” netoli Opasados, į šiaurę nuo kaimo.",
-  "mn95:2.1": "Tuo gi pat metu brahmanas Čianki gyveno Opasadoje valdydamas ją, su daugybe žmonių, su gausybe žolės (gyvuliams), medienos, vandens telkinių, grūdų, karališko turto, šventų Kosalos karaliaus, Pasėnadžio įteiktų dovanų. ",
+  "mn95:2.1": "Tuo gi pat metu brahmanas Čianki gyveno Opasadoje valdydamas ją, su daugybe žmonių, su gausybe žolės (gyvuliams), medienos, vandens telkinių, grūdų, su karališkais turtais, šventomis Kosalos karaliaus Pasėnadžio įteiktomis dovanomis. ",
   "mn95:3.1": "Išgirdo gi Opasados brahmanai namų šeimininkai,",
   "mn95:3.2": "esą atsiskyrėlis Gotama Sakjų sūnus, palikusysis pasaulietinį Sakjų šeimos gyvenimą, klajodamas Kosaloje kartu su didžiule vienuolių bendruomene užsuko į Kosalos brahmanų kaimą Opasadą ir yra apsistojęs salos medžių giraitėje „Dievų giraitė” netoli Opasados, į šiaurę nuo kaimo.",
   "mn95:3.3": "Ir apie tą gi Garbųjį Gotamą yra pasklidę tokie nuostabūs pagyros žodžiai:",
