--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.124_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.124_translation-de-sabbamitta.json
@@ -10,5 +10,5 @@
   "sn22.124:2.3": "jegliche Art von Wahrnehmung … ",
   "sn22.124:2.4": "jegliche Art von Entscheidungen … ",
   "sn22.124:2.5": "jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliches Bewusstsein – wahrhaftig mit rechter Weisheit: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
-  "sn22.124:2.6": "Auf diese Art erkennt und sieht man, sodass es kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen mit Bewusstsein versehenen Körper gibt, noch für alle äußeren Reize.“ "
+  "sn22.124:2.6": "Auf diese Art erkennt und sieht man, sodass es kein Sich-Identifizieren, kein Sich-Aneignen und keine zugrunde liegende Neigung zur Einbildung für diesen mit Bewusstsein versehenen Körper gibt, noch für alle äußeren Reize.“ "
 }
