--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -34,5 +34,6 @@
   "sn55.7:5.4": "Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre.",
   "sn55.7:5.5": "Comment pourrais-je infliger à un autre des choses qui me sont désagréables et déplaisantes ?’",
   "sn55.7:5.6": "Ayant considéré ceci, il s’abstient lui-même de se saisir de ce qui n’a pas été donné, il incite les autres à s’abstenir de se saisir de ce qui n’a pas été donné, et il fait l’éloge du fait de s’abstenir de se saisir de ce qui n’a pas été donné.",
-  "sn55.7:5.7": "Ainsi, sa conduite corporelle est purifiée de trois manières."
+  "sn55.7:5.7": "Ainsi, sa conduite corporelle est purifiée de trois manières.",
+  "sn55.7:6.1": "De plus, maîtres de maison, un noble disciple considère ceci :"
 }
