--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -37,5 +37,6 @@
   "sn55.7:5.7": "Ainsi, sa conduite corporelle est purifiée de trois manières.",
   "sn55.7:6.1": "De plus, maîtres de maison, un noble disciple considère ceci :",
   "sn55.7:6.2": "‘Si quelqu’un devait commettre un adultère avec ma femme, cela ne me serait pas agréable ni plaisant.",
-  "sn55.7:6.3": "Et si je devais commettre un adultère avec la femme d’un autre, cela ne serait pas non plus agréable ni plaisant pour cette autre personne."
+  "sn55.7:6.3": "Et si je devais commettre un adultère avec la femme d’un autre, cela ne serait pas non plus agréable ni plaisant pour cette autre personne.",
+  "sn55.7:6.4": "Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre."
 }
