--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -39,5 +39,6 @@
   "sn55.7:6.2": "‘Si quelqu’un devait commettre un adultère avec ma femme, cela ne me serait pas agréable ni plaisant.",
   "sn55.7:6.3": "Et si je devais commettre un adultère avec la femme d’un autre, cela ne serait pas non plus agréable ni plaisant pour cette autre personne.",
   "sn55.7:6.4": "Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre.",
-  "sn55.7:6.5": "Comment pourrais-je infliger à un autre des choses qui me sont désagréables et déplaisantes ?’"
+  "sn55.7:6.5": "Comment pourrais-je infliger à un autre des choses qui me sont désagréables et déplaisantes ?’",
+  "sn55.7:6.6": "Ayant considéré ceci, il s’abstient lui-même de la méconduite en raison [des plaisirs] de la sensualité, il incite les autres à s’abstenir de la méconduite en raison [des plaisirs] de la sensualité, et il fait l’éloge du fait de s’abstenir de la méconduite en raison [des plaisirs] de la sensualité."
 }
