--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -43,5 +43,6 @@
   "sn55.7:6.6": "Ayant considéré ceci, il s’abstient lui-même de la méconduite en raison [des plaisirs] de la sensualité, il incite les autres à s’abstenir de la méconduite en raison [des plaisirs] de la sensualité, et il fait l’éloge du fait de s’abstenir de la méconduite en raison [des plaisirs] de la sensualité.",
   "sn55.7:6.7": "Ainsi, sa conduite corporelle est purifiée de trois manières.",
   "sn55.7:7.1": "De plus, maîtres de maison, un noble disciple considère ceci :",
-  "sn55.7:7.2": "‘Si quelqu’un devait porter atteinte à mon bien-être avec des paroles fausses, cela ne me serait pas agréable ni plaisant."
+  "sn55.7:7.2": "‘Si quelqu’un devait porter atteinte à mon bien-être avec des paroles fausses, cela ne me serait pas agréable ni plaisant.",
+  "sn55.7:7.3": "Et si je devais porter atteinte au bien-être d’un autre avec des paroles fausses, cela ne serait pas non plus agréable ni plaisant pour cette autre personne."
 }
