--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -50,5 +50,6 @@
   "sn55.7:7.6": "Ayant considéré ceci, il s’abstient lui-même des paroles fausses, il incite les autres à s’abstenir des paroles fausses, et il fait l’éloge du fait de s’abstenir des paroles fausses.",
   "sn55.7:7.7": "Ainsi, sa bonne conduite verbale est purifiée de trois manières.",
   "sn55.7:8.1": "De plus, maîtres de maison, un noble disciple considère ceci :",
-  "sn55.7:8.2": "‘Si quelqu’un devait me séparer de mes amis avec des paroles médisantes, cela ne me serait pas agréable ni plaisant."
+  "sn55.7:8.2": "‘Si quelqu’un devait me séparer de mes amis avec des paroles médisantes, cela ne me serait pas agréable ni plaisant.",
+  "sn55.7:8.3": "Et si je devais séparer un autre de ses amis avec des paroles médisantes, cela ne serait pas non plus agréable ni plaisant pour cette autre personne."
 }
