--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -61,5 +61,6 @@
   "sn55.7:10.1": "De plus, maîtres de maison, un noble disciple considère ceci :",
   "sn55.7:10.2": "‘Si quelqu’un devait s’adresser à moi avec des paroles frivoles et des bavardages infructueux, cela ne me serait pas agréable ni plaisant.",
   "sn55.7:10.3": "Et si je devais m’adresser à un autre avec des paroles frivoles et des bavardages infructueux, cela ne serait pas non plus agréable ni plaisant pour cette autre personne.",
-  "sn55.7:10.4": "Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre."
+  "sn55.7:10.4": "Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre.",
+  "sn55.7:10.5": "Comment pourrais-je infliger à un autre des choses qui me sont désagréables et déplaisantes ?’"
 }
