--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -66,5 +66,6 @@
   "sn55.7:10.6": "Ayant considéré ceci, il s’abstient lui-même des bavardages infructueux, il incite les autres à s’abstenir des bavardages infructueux, et il fait l’éloge du fait de s’abstenir des bavardages infructueux.",
   "sn55.7:10.7": "Ainsi, sa bonne conduite verbale est purifiée de trois manières.",
   "sn55.7:11.1": "Il possède une confiance vérifiée dans le Bouddha :",
-  "sn55.7:11.2": "‘Assurément, ce Fortuné est un arahant véritablement éveillé, accompli en connaissance et en [bonne] conduite, sublime, connaisseur du monde, suprême guide des personnes désirant l’entraînement, enseignant des dévas et des humains, un Fortuné éveillé.’"
+  "sn55.7:11.2": "‘Assurément, ce Fortuné est un arahant véritablement éveillé, accompli en connaissance et en [bonne] conduite, sublime, connaisseur du monde, suprême guide des personnes désirant l’entraînement, enseignant des dévas et des humains, un Fortuné éveillé.’",
+  "sn55.7:11.3": "Il possède une confiance vérifiée dans le Dhamma : «Le Dhamma est bien exposé par le Fortuné : il est visible directement, immédiat, il invite à venir voir [par soi-même], il est efficace, à être expérimenté individuellement par les sages.»"
 }
