--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -67,5 +67,6 @@
   "sn55.7:10.7": "Ainsi, sa bonne conduite verbale est purifiée de trois manières.",
   "sn55.7:11.1": "Il possède une confiance vérifiée dans le Bouddha :",
   "sn55.7:11.2": "‘Assurément, ce Fortuné est un arahant véritablement éveillé, accompli en connaissance et en [bonne] conduite, sublime, connaisseur du monde, suprême guide des personnes désirant l’entraînement, enseignant des dévas et des humains, un Fortuné éveillé.’",
-  "sn55.7:11.3": "Il possède une confiance vérifiée dans le Dhamma : «Le Dhamma est bien exposé par le Fortuné : il est visible directement, immédiat, il invite à venir voir [par soi-même], il est efficace, à être expérimenté individuellement par les sages.»"
+  "sn55.7:11.3": "Il possède une confiance vérifiée dans le Dhamma : «Le Dhamma est bien exposé par le Fortuné : il est visible directement, immédiat, il invite à venir voir [par soi-même], il est efficace, à être expérimenté individuellement par les sages.»",
+  "sn55.7:11.4": "Il possède une confiance vérifiée dans la Communauté : «La Communauté des disciples du Fortuné qui a bien pratiqué, la Communauté des disciples du Fortuné qui a pratiqué droitement, la Communauté des disciples du Fortuné qui a pratiqué méthodiquement, la Communauté des disciples du Fortuné qui a pratiqué adéquatement, c’est-à-dire les quatre paires de personnes, les huit [types d’]individus, cette Communauté des disciples du Fortuné est digne de dons, digne d’hospitalité, digne d’offrandes, digne de salutations respectueuses, c’est le suprême champ de mérite pour le monde.»"
 }
