--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -21,7 +21,7 @@
   "sn55.7:3.4": "Le Fortuné dit alors :",
   "sn55.7:4.1": "— Et quel est, maîtres de maison, l’exposé du Dhamma relatif à soi-même ?",
   "sn55.7:4.2": "À cet égard, un noble disciple considère ceci :",
-  "sn55.7:4.3": " ‘Je suis quelqu’un qui désire la vie, qui désire ne pas mourir, qui aspire au bien-être et qui est repoussé par le mal-être.",
+  "sn55.7:4.3": "“Je suis quelqu’un qui désire la vie, qui désire ne pas mourir, qui aspire au bien-être et qui est repoussé par le mal-être.",
   "sn55.7:4.4": "Puisque je désire la vie, que je désire ne pas mourir, que je désire le bien-être et que je suis repoussé par le mal-être, si quelqu’un devait prendre ma vie, cela ne me serait pas agréable ni plaisant.",
   "sn55.7:4.5": "Et si je devais prendre la vie de quelqu’un qui désire la vie, qui désire ne pas mourir, qui aspire au bien-être et qui est repoussé par le mal-être, cela ne serait pas non plus agréable ni plaisant pour cette autre personne.",
   "sn55.7:4.6": "Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre.",
